tests/ui/functional-struct-update/functional-struct-update-respects-privacy.stderr
error[E0451]: field `secret_uid` of struct `S` is private
  --> $DIR/functional-struct-update-respects-privacy.rs:32:49
   |
LL |     let s_2 = foo::S { b: format!("ess two"), ..s_1 }; // FRU ...
   |                                                 ^^^ field `secret_uid` is private

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0451`.
